# Simulink-Target-support-for-ED247

./: .gitignore  .gitlab-ci.yml  .metadata  CHANGELOG.md  Dockerfile  Jenkinsfile  Jenkinsfile-r2016b  Jenkinsfile-r2017b  Jenkinsfile-r2018b  Jenkinsfile-r2019b  Jenkinsfile-r2020b  README.md  ToolboxPackagingConfiguration.prj
+ci/: Compile.m  Dependencies.m  Package.m  Pipeline.m  Test.m  cleanup.m  install.m  openProject.m  package.m  prepare.m  test.m
.SimulinkProject/: ProjectData.type.Info.xml  Toolbox.Packaging.type.Files.xml
.SimulinkProject/Root.type.EntryPoints/: 60ac5c2d-475b-42fa-bdef-e8edafd223af.type.EntryPoint.xml  f99f3fc4-13a7-43a8-81fc-c9490d280f7b.type.EntryPoint.xml
.SimulinkProject/Root.type.ProjectPath/: 014365b7-9bf1-4b76-b5d2-d55aa17a4741.type.Reference.xml  0908e156-a840-4cdd-8d95-cfb1929702d3.type.Reference.xml  ac6f06e0-4646-4d6d-93ac-21a0bbad25c8.type.Reference.xml  ad9b3933-42a8-4002-924c-7b8bfd270d68.type.Reference.xml  c8088428-5a15-4d05-9356-89ee274e2a53.type.Reference.xml  d9d369cb-3b20-49b6-b93c-2870f878ba37.type.Reference.xml
analysis/: ED247_for_Simulink.psprj
analysis/include_wrappers/: real_simstruc.h  simstruc.h  simulink.c
c_sources/: CMakeLists.txt  README.md  readECIC.sh  runTests.sh
c_sources/include/: ed247_cmd_xml.h  ed247_interface.h  ed247_sfun_configure.h  ed247_sfun_receive.h  tools.h
c_sources/src/: CMakeLists.txt  ed247_cmd_xml.c  ed247_cmd_xml.cpp  ed247_interface.c  ed247_interface.cpp  ed247_sfun_configure.c  ed247_sfun_receive.c  tools.c  tools.cpp
c_sources/tests/: CMakeLists.txt  a429_test.cpp  a664_test.cpp  a825_test.cpp  ed247_cmd_xml_test.cpp  ed247_interface_test.c  ed247_interface_test.cpp  issues_test.cpp  main.cpp  nad_test.cpp  testutils.cpp  testutils.h  tools_test.cpp
c_sources/tests/_files/: ELACe2C_CMD.xml  ELACe2C_ECIC.xml  a429_cmd_simple01.xml  a429_cmd_simple02.xml  a429_mc_simple01.xml  a429_mc_simple02.xml  a664_cmd_simple01.xml  a664_cmd_simple02.xml  a664_cmd_simple03.xml  a664_cmd_simple04.xml  a664_mc_simple01.xml  a664_mc_simple02.xml  a664_mc_simple03.xml  a664_mc_simple04.xml  a825_cmd_simple01.xml  a825_mc_1.xml  a825_mc_2.xml  bridge_messages_description.xml  nad_mc_1.xml  nad_mc_2.xml  nad_mc_3.xml  nad_mc_4.xml
c_sources/tests/polyspace/: stubs.c
doc/: GettingStarted.mlx  info.xml
doc/html/: demos.html  developer_guide.html  ed247_index.html  getting_started.html  helptoc.xml  installation_guide.html  package_and_share.html  speedgoat.html
doc/scripts/: demos.mlx  developer_guide.mlx  ed247_index.mlx  installation_guide.mlx  package_and_share.mlx  speedgoat.mlx
libraries/ed247/: addXmlFile.m  ed247_mex.c  ed247_mex.cpp  ed247_sfun.c  ed247_sfun.cpp  ed247_sfun.tlc  lib_ed247.slx  rtwmakecfg.m  slblocks.m
sources/+ed247/: Configuration.m  ConfigurationUI.m  ConfigurationUIView.mlapp  ECIC.m  Folder.m  Speedgoat.m  compile.m
sources/toolchain/: initEnvironmentVariables.m  mingw64_ed247_tc.m  mingw64_ed247_tc.mat  sl_customization.m  updateMinGW64Toolchain.m
sources/utilities/: addXmlFile.m  exportTestModelsToOtherReleases.m  projectClose.m  projectOpen.m  sl_customization.m
tests/: stubSFun.sh
tests/+ed247/: CodeGenerationTest.m  ConfigurationTest.m  MockedInterfaceTest.m  RefreshSendTest.m  SFunctionBlockTest.m  SimulationTest.m
tests/+issues/: Issue018.m  Issue023.m  Issue025.m  Issue026.m  Issue027.m  Issue029.m
tests/+toolbox/: ConfigurationTest.m
tests/+tools/: ParallelPoolFixture.m  ToolboxFixture.m  WorkFolderFixture.m
tests/_files/: .metadata01  .metadata02  ELACe2C_ECIC.mat  (+52 more)
(+66 files in other folders)
