CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

set(BINARY ${CMAKE_PROJECT_NAME}_lib)

set(SOURCES ed247_cmd_xml.c ed247_interface.c tools.c)
add_library(${BINARY} STATIC ${SOURCES})


# ED247 library
IF(WIN32)	
	TARGET_LINK_LIBRARIES(${BINARY} INTERFACE libed247.dll.a)
ELSE(WIN32)
	TARGET_LINK_LIBRARIES(${BINARY} INTERFACE libed247.so)
ENDIF(WIN32)

# LibXML2 library
IF(WIN32)
	TARGET_LINK_LIBRARIES(${BINARY} INTERFACE libxml2.a)	
ELSE(WIN32)
	TARGET_LINK_LIBRARIES(${BINARY} INTERFACE libxml2.so)
ENDIF(WIN32)

# Other dependencies
IF(WIN32)
	TARGET_LINK_LIBRARIES(${BINARY} INTERFACE Ws2_32)	
ENDIF(WIN32)

